--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "autoprefixer": "^10.3.4",
     "bootstrap": "^5.1.1",
+    "boxicons": "^2.0.9",
     "postcss-cli": "^8.3.1"
   }
 }
