--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
     "url": "https://github.com/PatrickPrakash/Bootstrap-Portfolio/issues"
   },
   "homepage": "https://github.com/PatrickPrakash/Bootstrap-Portfolio#readme",
-  "devDependencies": {
-    "sass": "^1.41.1"
-  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "autoprefixer": "^10.3.4",
     "bootstrap": "^5.1.1",
     "boxicons": "^2.0.9",
-    "postcss-cli": "^8.3.1"
+    "postcss-cli": "^8.3.1",
+    "sass": "^1.41.1"
   }
 }
